dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AC_CONFIG_SRCDIR(pyhpi.spec.in)
AM_INIT_AUTOMAKE(pyhpi, 1.0)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_LIBTOOL

PKG_CHECK_MODULES(HPI, [openhpi >= 2.0.0])
AC_SUBST(HPI_CFLAGS)
AC_SUBST(HPI_LIBS)

AM_PATH_PYTHON(2.3.0)
py_prefix=`$PYTHON -c "import sys; print sys.prefix"`
py_exec_prefix=`$PYTHON -c "import sys; print sys.exec_prefix"`
PYTHON_INCLUDES="-I${py_prefix}/include/python${PYTHON_VERSION}"
if test "$py_prefix" != "$py_exec_prefix"; then
  PYTHON_INCLUDES="$PYTHON_INCLUDES -I${py_exec_prefix}/include/python${PYTHON_VERSION}"
fi
AC_SUBST(PYTHON_INCLUDES)
prefix=$py_exec_prefix
AC_SUBST(prefix)

AC_OUTPUT([
	pyhpi.spec
	Makefile
	pyhpi/Makefile
])

